unpackaged/main/default/objects/litify_time__lit_Classification_Code__c/litify_time__lit_Classification_Code__c.object-meta.xml
<CustomObject>
    <label>Classification Code</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classification Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>