unpackaged/main/default/objects/litify_time__lit_Classification_Code__c/fields/litify_time__lit_Active__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>