unpackaged/main/default/objects/litify_time__lit_Classification_Code__c/fields/litify_time__lit_Code__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Code__c</fullName>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>