unpackaged/main/default/objects/litify_time__lit_Classification_Code__c/fields/litify_time__lit_Description__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>